@@ -1,12 +1,18 @@
 #!/bin/sh
 
+if [ -n "$RELEASE_DEBUG" ]; then
+   echo "Debug output is enabled."
+   set -x
+fi
+
+
 # Constants
 
 PROJECT_NAME="rhq"
 PROJECT_DISPLAY_NAME="RHQ"
-PROJECT_SVN_URL="http://svn.rhq-project.org/repos/rhq"
+PROJECT_GIT_WEB_URL="http://git.fedorahosted.org/git/?p=rhq/rhq.git"
 TAG_PREFIX="RHQ"
-MINIMUM_MAVEN_VERSION="2.0.10"
+MINIMUM_MAVEN_VERSION="2.1.0"
 
 
 # Functions
@@ -21,25 +27,29 @@ abort()
 }
 
 usage() 
-{
-   EXE=`basename $0`
-   abort "Usage:   $EXE community|enterprise RELEASE_VERSION DEVELOPMENT_VERSION" "Example: $EXE community 1.3.1 1.3.2-SNAPSHOT"   
+{   
+   abort "$@" "Usage:   $EXE community|enterprise RELEASE_VERSION DEVELOPMENT_VERSION RELEASE_BRANCH GIT_USERNAME test|production" "Example: $EXE enterprise 3.0.0.GA 3.0.0-SNAPSHOT release-3.0.0 ips test"
 }
 
 
 # Process command line args.
 
-if [ "$#" -ne 3 ]; then
+EXE=`basename $0`
+if [ "$#" -ne 6 ]; then
    usage
 fi  
 RELEASE_TYPE="$1"
 if [ "$RELEASE_TYPE" != "community" ] && [ "$RELEASE_TYPE" != "enterprise" ]; then
-   usage
+   usage "Invalid release type: $RELEASE_TYPE (valid release types are 'community' or 'enterprise')"
 fi
 RELEASE_VERSION="$2"
-TAG_VERSION=`echo $RELEASE_VERSION | sed 's/\./_/g'`
-RELEASE_TAG="${TAG_PREFIX}_${TAG_VERSION}"
 DEVELOPMENT_VERSION="$3"
+RELEASE_BRANCH="$4"
+GIT_USERNAME="$5"
+MODE="$6"
+if [ "$MODE" != "test" ] && [ "$MODE" != "production" ]; then
+   usage "Invalid mode: $MODE (valid modes are 'test' or 'production')"
+fi
 
 
 # Make sure JAVA_HOME points to a valid JDK 1.6+ install.
@@ -67,36 +77,40 @@ if ! javap java.util.Deque >/dev/null 2>&1; then
    abort "java.util.Deque not found - Java version appears to be less than 1.6 - Jave version must be 1.6 or later."
 fi
 
+# TODO: Check that JDK version is < 1.7.
 
-# Make sure JAVA5_HOME points to a valid JDK 1.5 install. 
+
+# If this is an enterprise release, make sure JAVA5_HOME points to a valid JDK 1.5 install. 
 # We need this to validate only Java 5 or earlier APIs are used in all modules, except the CLI, which requires Java 6.
 
-if [ -z "$JAVA5_HOME" ]; then
-   abort "JAVA5_HOME environment variable is not set - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
+if [ "$RELEASE_TYPE" = "enterprise" ]; then
+    if [ -z "$JAVA5_HOME" ]; then
+       abort "JAVA5_HOME environment variable is not set - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
+    fi
+
+    if [ ! -d "$JAVA5_HOME" ]; then
+       abort "JAVA5_HOME ($JAVA5_HOME) does not exist or is not a directory - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
+    fi
+
+    if [ ! -x "$JAVA5_HOME/bin/java" ]; then
+       abort "$JAVA5_HOME/bin/java does not exist or is not executable - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
+    fi
+
+    if [ ! -x "$JAVA5_HOME/bin/javac" ]; then
+       abort "$JAVA5_HOME/bin/javac does not exist or is not executable - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
+    fi
+
+    if ! "$JAVA5_HOME/bin/javap" java.lang.Enum >/dev/null 2>&1; then
+       abort "java.lang.Enum not found - JAVA5_HOME ($JAVA5_HOME) version appears to be less than 1.5 - version must be 1.5.x."
+    fi
+
+    if "$JAVA5_HOME/bin/javap" java.util.Deque >/dev/null 2>&1; then
+       abort "java.util.Deque found - JAVA5_HOME ($JAVA5_HOME) version appears to be greater than or equal to 1.6 - version must be 1.5.x."
+    fi
 fi
 
-if [ ! -d "$JAVA5_HOME" ]; then
-   abort "JAVA5_HOME ($JAVA5_HOME) does not exist or is not a directory - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
-fi
 
-if [ ! -x "$JAVA5_HOME/bin/java" ]; then
-   abort "$JAVA5_HOME/bin/java does not exist or is not executable - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
-fi
-
-if [ ! -x "$JAVA5_HOME/bin/javac" ]; then
-   abort "$JAVA5_HOME/bin/javac does not exist or is not executable - JAVA5_HOME must point to a JDK (not JRE) 1.5 install dir."
-fi
-
-if ! "$JAVA5_HOME/bin/javap" java.lang.Enum >/dev/null 2>&1; then
-   abort "java.lang.Enum not found - JAVA5_HOME ($JAVA5_HOME) version appears to be less than 1.5 - version must be 1.5.x."
-fi
-
-if "$JAVA5_HOME/bin/javap" java.util.Deque >/dev/null 2>&1; then
-   abort "java.util.Deque found - JAVA5_HOME ($JAVA5_HOME) version appears to be greater than or equal to 1.6 - version must be 1.5.x."
-fi
-
-
-# Make sure M2_HOME points to a valid Maven 2 install.
+# Make sure M2_HOME points to a valid Maven 2.1.x or 2.2.x install.
 
 if [ -z "$M2_HOME" ]; then
    abort "M2_HOME environment variable is not set - M2_HOME must point to a Maven, $MINIMUM_MAVEN_VERSION or later, install dir."
@@ -113,116 +127,127 @@ if ! which mvn >/dev/null 2>&1; then
    abort "mvn not found in PATH ($PATH) - M2_HOME must point to a Maven, $MINIMUM_MAVEN_VERSION or later, install dir."
 fi
 
-
-# Make sure SUBVERSION_HOME points to a valid Subversion install.
-
-if [ -z "$SUBVERSION_HOME" ]; then
-   abort "SUBVERSION_HOME environment variable is not set." >&2
+mvn -version >/dev/null
+[ $? -ne 0 ] && abort "mvn --version failed with exit code $?."
+MAVEN_VERSION=`mvn -version | head -1 | sed 's|[^0-9]*\([^ ]*\).*|\1|'`
+if echo $MAVEN_VERSION | grep -v "^2.[12]"; then
+   abort "Unsupported Maven version - $MAVEN_VERSION. Only Maven 2.1.x or 2.2.x are supported. Please update the value of M2_HOME, then try again."
 fi
 
-if [ ! -d "$SUBVERSION_HOME" ]; then
-   abort "SUBVERSION_HOME ($SUBVERSION_HOME) does not exist or is not a directory."
+
+# Make sure git 1.6.x or 1.7.x is in the PATH.
+
+if ! which git >/dev/null 2>&1; then
+   abort "git not found in PATH ($PATH)."
 fi
 
-echo "Prepending $SUBVERSION_HOME/bin to PATH..."
-PATH="$SUBVERSION_HOME/bin:$PATH"
-
-if ! which svn >/dev/null 2>&1; then
-   abort "svn not found in PATH ($PATH) - SUBVERSION_HOME must point to an SVN install dir."
+git --version >/dev/null
+[ $? -ne 0 ] && abort "git --version failed with exit code $?."
+GIT_VERSION=`git --version | sed 's|[^0-9]*\([^ ]*\).*|\1|'`
+if echo $GIT_VERSION | grep -v "^1.[67]"; then
+   abort "Unsupported git version - $GIT_VERSION. Only git 1.6.x or 1.7.x are supported. Please add a directory containing a supported version of git to your PATH, then try again."
 fi
 
-echo "Prepending $SUBVERSION_HOME/lib to LD_LIBRARY_PATH..."
-LD_LIBRARY_PATH="$SUBVERSION_HOME/lib:$LD_LIBRARY_PATH"
-export LD_LIBRARY_PATH
 
+# Set various environment variables.
 
-# Set additional required env vars.
-
-LANG=en_US.iso88591
-export LANG
+MAVEN_OPTS="-Xms512M -Xmx1024M -XX:PermSize=128M -XX:MaxPermSize=256M"
+export MAVEN_OPTS
 
 
 # Set various local variables.
 
-if [ -z "$BASE_DIR" ]; then
-   BASE_DIR="$HOME"
+if [ -n "$HUDSON_URL" ] && [ -n "$WORKSPACE" ]; then
+   echo "We appear to be running in a Hudson job." 
+   WORKING_DIR="$WORKSPACE"
+   MAVEN_LOCAL_REPO_DIR="$HOME/.m2/hudson-release-$RELEASE_TYPE-repository"
+   MAVEN_SETTINGS_FILE="$HOME/.m2/hudson-$JOB_NAME-settings.xml"
+elif [ -z "$WORKING_DIR" ]; then
+   WORKING_DIR="$HOME/release/rhq"
+   MAVEN_LOCAL_REPO_DIR="$HOME/release/m2-repository"
+   MAVEN_SETTINGS_FILE="$HOME/release/m2-settings.xml"
 fi
-WORK_DIR="$BASE_DIR/${PROJECT_NAME}-${RELEASE_TYPE}-${RELEASE_VERSION}"   
 
-RELEASE_BRANCH_CHECKOUT_DIR="$WORK_DIR/branch"
-RELEASE_TAG_CHECKOUT_DIR="$WORK_DIR/tag"
-if [ -n "$RELEASE_BRANCH" ]; then
-   RELEASE_BRANCH_SVN_URL="$PROJECT_SVN_URL/branches/$RELEASE_BRANCH"
-else
-   RELEASE_BRANCH_SVN_URL="$PROJECT_SVN_URL/trunk"
-fi
-RELEASE_TAG_SVN_URL="$PROJECT_SVN_URL/tags/$RELEASE_TAG"
+PROJECT_GIT_URL="ssh://${GIT_USERNAME}@git.fedorahosted.org/git/rhq/rhq.git"
 
-MAVEN_LOCAL_REPO_DIR="$BASE_DIR/release-m2-repo"
-MAVEN_SETTINGS_FILE="$WORK_DIR/settings.xml"
-MAVEN_OPTS="--settings "$MAVEN_SETTINGS_FILE" --debug --errors -Penterprise -Pdist -Prelease"
+MAVEN_ARGS="--settings $MAVEN_SETTINGS_FILE --batch-mode --errors -Penterprise,dist,release"
 if [ "$RELEASE_TYPE" = "enterprise" ]; then
-   MAVEN_OPTS="$MAVEN_OPTS -Pojdbc-driver -Dpackage-connectors -Dexclude-webdav"
+   MAVEN_ARGS="$MAVEN_ARGS -Dexclude-webdav -Djava5.home=$JAVA5_HOME/jre"
+fi
+if [ -n "$RELEASE_DEBUG" ]; then
+   MAVEN_ARGS="$MAVEN_ARGS --debug"
+fi
+if [ -n "$RELEASE_ADDITIONAL_MAVEN_ARGS" ]; then
+   MAVEN_ARGS="$MAVEN_ARGS $RELEASE_ADDITIONAL_MAVEN_ARGS"
 fi
 if [ -z "$MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS" ]; then
-   MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS="24"
+   MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS="12"
+fi
+
+if [ "$MODE" = "production" ]; then
+   MAVEN_RELEASE_PERFORM_GOAL="deploy"
+else
+   MAVEN_RELEASE_PERFORM_GOAL="install"
 fi
 
 
-# Print out summary of environment.
+TAG_VERSION=`echo $RELEASE_VERSION | sed 's/\./_/g'`
+RELEASE_TAG="${TAG_PREFIX}_${TAG_VERSION}"
+
+
+# Print out a summary of the environment.
 
 echo
-echo "========================= Environment Variables =============================="
+echo "========================== Environment Variables =============================="
 echo "JAVA_HOME=$JAVA_HOME"
+[ "$RELEASE_TYPE" = "enterprise" ] && echo "JAVA5_HOME=$JAVA5_HOME"
 echo "M2_HOME=$M2_HOME"
-echo "SUBVERSION_HOME=$SUBVERSION_HOME"
+echo "MAVEN_OPTS=$MAVEN_OPTS"
 echo "PATH=$PATH"
-echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
-echo "LANG=$LANG"
-echo "============================ Local Variables ================================="
-echo "WORK_DIR=$WORK_DIR"
+echo "============================= Local Variables ================================="
+echo "WORKING_DIR=$WORKING_DIR"
 echo "PROJECT_NAME=$PROJECT_NAME"
+echo "PROJECT_GIT_URL=$PROJECT_GIT_URL"
 echo "RELEASE_TYPE=$RELEASE_TYPE"
 echo "RELEASE_VERSION=$RELEASE_VERSION"
 echo "DEVELOPMENT_VERSION=$DEVELOPMENT_VERSION"
 echo "RELEASE_BRANCH=$RELEASE_BRANCH"
-echo "RELEASE_BRANCH_SVN_URL=$RELEASE_BRANCH_SVN_URL"
-echo "RELEASE_BRANCH_CHECKOUT_DIR=$RELEASE_BRANCH_CHECKOUT_DIR"
 echo "RELEASE_TAG=$RELEASE_TAG"
-echo "RELEASE_TAG_SVN_URL=$RELEASE_TAG_SVN_URL"
-echo "RELEASE_TAG_CHECKOUT_DIR=$RELEASE_TAG_CHECKOUT_DIR"
+echo "MODE=$MODE"
 echo "MAVEN_LOCAL_REPO_DIR=$MAVEN_LOCAL_REPO_DIR"
 echo "MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS=$MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS"
 echo "MAVEN_SETTINGS_FILE=$MAVEN_SETTINGS_FILE"
-echo "MAVEN_OPTS=$MAVEN_OPTS"
-echo "============================ Program Versions ================================"
-mvn --version
+echo "MAVEN_ARGS=$MAVEN_ARGS"
+echo "MAVEN_RELEASE_PERFORM_GOAL=$MAVEN_RELEASE_PERFORM_GOAL"
+echo "============================= Program Versions ================================"
+git --version
 echo
-svn --version | head -2
-echo "=============================================================================="
+java -version
+echo
+mvn --version | head -1
+echo "==============================================================================="
 echo
 
 
-# Clean the Maven local repo.
-
-if [ -f "$MAVEN_LOCAL_REPO_DIR" ]; then
-   OUTPUT=`find "$MAVEN_LOCAL_REPO_DIR" -maxdepth 0 -mtime $MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS`
-   if [ -n "$OUTPUT" ]; then 
-      
-      echo "MAVEN_LOCAL_REPO_DIR ($MAVEN_LOCAL_REPO_DIR) has existed for more than 24 hours - purging it for a clean-clean build..."
-      rm -rf "$MAVEN_LOCAL_REPO_DIR"
-   fi
-fi
+# Clean the Maven local repo if it hasn't been purged recently.
+# TODO: Uncomment this.
+#if [ -f "$MAVEN_LOCAL_REPO_DIR" ]; then
+#   OUTPUT=`find "$MAVEN_LOCAL_REPO_DIR" -maxdepth 0 -mtime $MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS`
+#   if [ -n "$OUTPUT" ]; then       
+#      echo "MAVEN_LOCAL_REPO_DIR ($MAVEN_LOCAL_REPO_DIR) has existed for more than $MAVEN_LOCAL_REPO_PURGE_INTERVAL_HOURS hours - purging it for a clean-clean build..."
+#      rm -rf "$MAVEN_LOCAL_REPO_DIR"
+#   fi
+#fi
 mkdir -p "$MAVEN_LOCAL_REPO_DIR"
 
 
 # Create the Maven settings file.
-SETTINGS=${WORK_DIR}/settings.xml
-cat <<EOF >${SETTINGS}
+cat <<EOF >"${MAVEN_SETTINGS_FILE}"
 <settings>
    <localRepository>$MAVEN_LOCAL_REPO_DIR</localRepository>
    
    <profiles>
+
       <profile>
          <id>release</id>
          <properties>
@@ -247,87 +272,133 @@ cat <<EOF >${SETTINGS}
          </properties>
       </profile>
  
-      <profile>
-         <id>ojdbc-driver</id>
-         <repositories>
-            <repository>
-               <id>internal</id>
-               <name>Internal Repository</name>
-               <url>http://jon01.qa.atl2.redhat.com:8042/m2-repo/</url>
-            </repository>
-         </repositories>              
-      </profile>
    </profiles>
 </settings>
 EOF
 
 
-# Run a test build before tagging.
+# Clone and/or checkout the source from git.
 
-if [ -f "$RELEASE_BRANCH_CHECKOUT_DIR" ]; then
-   echo "Purging contents of RELEASE_BRANCH_CHECKOUT_DIR ($RELEASE_BRANCH_CHECKOUT_DIR)..."
-   rm -rf "$RELEASE_BRANCH_CHECKOUT_DIR"
+if [ -d "$WORKING_DIR" ]; then
+   cd "$WORKING_DIR"
+   git status >/dev/null 2>&1
+   GIT_STATUS_EXIT_CODE=$?
+   # Note, git 1.6 and earlier returns an exit code of 1, rather than 0, if there are any uncommitted changes,
+   # and git 1.7 returns 0, so we check if the exit code is less than or equal to 1 to determine if $WORKING_DIR
+   # is truly a git working copy.
+   if [ "$GIT_STATUS_EXIT_CODE" -le 1 ]; then       
+       echo "Checking out a clean copy of the release branch ($RELEASE_BRANCH)..."
+       git fetch origin "$RELEASE_BRANCH"
+       [ "$?" -ne 0 ] && abort "Failed to fetch release branch ($RELEASE_BRANCH)."
+       git checkout "$RELEASE_BRANCH" 2>/dev/null
+       if [ "$?" -ne 0 ]; then
+           git checkout --track -b "$RELEASE_BRANCH" "origin/$RELEASE_BRANCH"
+       fi
+       [ "$?" -ne 0 ] && abort "Failed to checkout release branch ($RELEASE_BRANCH)."
+       git reset --hard "origin/$RELEASE_BRANCH"
+       [ "$?" -ne 0 ] && abort "Failed to reset release branch ($RELEASE_BRANCH)."
+       git clean -dxf
+       [ "$?" -ne 0 ] && abort "Failed to clean release branch ($RELEASE_BRANCH)."
+       git pull
+       [ "$?" -ne 0 ] && abort "Failed to update release branch ($RELEASE_BRANCH)."
+   else
+       echo "$WORKING_DIR does not appear to be a git working directory ('git status' returned $GIT_STATUS_EXIT_CODE) - removing it so we can freshly clone the repo..."
+       cd ..
+       rm -rf "$WORKING_DIR"
+       [ "$?" -ne 0 ] && abort "Failed to remove bogus working directory ($WORKING_DIR)."
+   fi
 fi
-mkdir -p "$RELEASE_BRANCH_CHECKOUT_DIR"
-
-echo "Checking out branch source from $RELEASE_BRANCH_SVN_URL to $RELEASE_BRANCH_CHECKOUT_DIR (this will take about 5-10 minutes)..."
-# We only need pom.xml and modules/**. Save some time by not checking out etc/**.
-svn co -N $RELEASE_BRANCH_SVN_URL "$RELEASE_BRANCH_CHECKOUT_DIR"
-cd "$RELEASE_BRANCH_CHECKOUT_DIR"
-svn co $RELEASE_BRANCH_SVN_URL/modules
-
-echo "Building project to ensure tests pass and to boostrap local Maven repo (this will take about 10-15 minutes)..."
-# This will build everything except the CLI, enforcing Java 5 APIs.
-mvn install $MAVEN_OPTS -Ddbsetup -Djava5.home=$JAVA5_HOME/jre
-if [ "$?" -ne 0 ]; then
-   abort "Build failed. Please see above Maven output for details, fix any issues, then try again."
-fi
-# Now build the CLI, enforcing Java 6 APIs.
-cd modules/enterprise/remoting/cli
-mvn install $MAVEN_OPTS
-if [ "$?" -ne 0 ]; then
-   abort "Build failed. Please see above Maven output for details, fix any issues, then try again."
+if [ ! -d "$WORKING_DIR" ]; then
+   echo "Cloning the $PROJECT_NAME git repo (this will take about 10-15 minutes)..."
+   git clone "$PROJECT_GIT_URL" "$WORKING_DIR"
+   [ "$?" -ne 0 ] && abort "Failed to clone $PROJECT_NAME git repo ($PROJECT_GIT_URL)."
+   cd "$CLONE_DIR"
+   git checkout --track -b $RELEASE_BRANCH "origin/$RELEASE_BRANCH"
+   [ "$?" -ne 0 ] && abort "Failed to checkout release branch ($RELEASE_BRANCH)."
 fi
 
+
+# If the specified tag already exists remotely and we're in production mode, then abort. If it exists and we're in test mode, then we'll delete it after we've had a successful dry run of release:prepare and are ready to tag.
+
+EXISTING_REMOTE_TAG=`git ls-remote --tags origin "$RELEASE_TAG"`
+if [ -n "$EXISTING_REMOTE_TAG" ] && [ "$MODE" = "production" ]; then
+   abort "A remote tag named $RELEASE_TAG already exists - aborting, since we are in production mode..."      
+fi
+
+
+# Run a test build before tagging. This will also publish the snapshot artifacts to the local repo to "bootstrap" the repo.
+
+echo "Building project to ensure tests pass and to bootstrap local Maven repo (this will take about 15-30 minutes)..."
+# NOTE: There is no need to do a mvn clean below, since we just did either a clone or clean checkout above.
+mvn install $MAVEN_ARGS -Ddbreset
+[ "$?" -ne 0 ] && abort "Test build failed. Please see above Maven output for details, fix any issues, then try again."
 echo
 echo "Test build succeeded!"
 
 
-# Tag the release.
+# Clean up the snapshot jars produced by the test build from module target dirs.
+
+echo "Cleaning up snapshot jars produced by test build from module target dirs..."
+mvn clean $MAVEN_ARGS
+[ "$?" -ne 0 ] && abort "Failed to cleanup snbapshot jars produced by test build from module target dirs. Please see above Maven output for details, fix any issues, then try again."
+
+
+# Do a dry run of tagging the release.
+
+echo "Doing a dry run of tagging the release..."
+mvn release:prepare $MAVEN_ARGS -DreleaseVersion=$RELEASE_VERSION -DdevelopmentVersion=$DEVELOPMENT_VERSION -Dresume=false -Dtag=$RELEASE_TAG "-DpreparationGoals=install $MAVEN_ARGS -Dmaven.test.skip=true -Ddbsetup-do-not-check-schema=true" -DdryRun=true
+[ "$?" -ne 0 ] && abort "Tagging dry run failed. Please see above Maven output for details, fix any issues, then try again."
+mvn release:clean $MAVEN_ARGS
+[ "$?" -ne 0 ] && abort "Failed to cleanup release plugin working files from tagging dry run. Please see above Maven output for details, fix any issues, then try again."
+echo
+echo "Tagging dry run succeeded!"
+
+
+# If there's an existing remote tag, and we didn't abort earlier, we must be in test mode, so we can safely delete it before we call mvn release:prepare to recreate it.
+
+if [ -n "$EXISTING_REMOTE_TAG" ]; then
+   echo "A remote tag named $RELEASE_TAG already exists - deleting it, since we are in test mode..."      
+   git push origin ":refs/tags/$RELEASE_TAG"
+   [ "$?" -ne 0 ] && abort "Failed to delete remote tag ($RELEASE_TAG)."
+fi
+
+
+# See if the specified tag already exists locally - if so, delete it (even if in production mode).
+EXISTING_LOCAL_TAG=`git tag -l "$RELEASE_TAG"`
+if [ -n "$EXISTING_LOCAL_TAG" ]; then
+   echo "A local tag named $RELEASE_TAG already exists - deleting it..."      
+   git tag -d "$RELEASE_TAG"
+   [ "$?" -ne 0 ] && abort "Failed to delete local tag ($RELEASE_TAG)."
+fi
+
+
+# If the dry run succeeded, tag it for real.
 
 echo "Tagging the release..."
-cd "$RELEASE_BRANCH_CHECKOUT_DIR"
-mvn release:prepare $MAVEN_OPTS -DreleaseVersion=$RELEASE_VERSION -DdevelopmentVersion=$DEVELOPMENT_VERSION -Dresume=false -Dtag=$RELEASE_TAG "-DpreparationGoals=clean verify $MAVEN_OPTS -Dmaven.test.skip=true -Ddbsetup-do-not-check-schema=true" -DdryRun=true
-if [ "$?" -ne 0 ]; then
-   abort "Tagging failed. Please see above Maven output for details, fix any issues, then try again."
-fi
+mvn release:prepare $MAVEN_ARGS -DreleaseVersion=$RELEASE_VERSION -DdevelopmentVersion=$DEVELOPMENT_VERSION -Dresume=false -Dtag=$RELEASE_TAG "-DpreparationGoals=install $MAVEN_ARGS -Dmaven.test.skip=true -Ddbsetup-do-not-check-schema=true" -DdryRun=false -Dusername=$GIT_USERNAME
+[ "$?" -ne 0 ] && abort "Tagging failed. Please see above Maven output for details, fix any issues, then try again."
 echo
 echo "Tagging succeeded!"
 
 
-# Checkout the tag and build it.
+# Checkout the tag and build it. If in production mode, publish the Maven artifacts.
 
-if [ -f "$RELEASE_TAG_CHECKOUT_DIR" ]; then
-   echo "Purging contents of RELEASE_TAG_CHECKOUT_DIR ($RELEASE_TAG_CHECKOUT_DIR)..."
-   rm -rf "$RELEASE_TAG_CHECKOUT_DIR"
-fi
-mkdir -p "$RELEASE_TAG_CHECKOUT_DIR"
-
-echo "Checking out tag source from $RELEASE_TAG_SVN_URL to $RELEASE_TAG_CHECKOUT_DIR (this will take about 5-10 minutes)..."
-svn co -N $RELEASE_TAG_SVN_URL "$RELEASE_TAG_CHECKOUT_DIR"
-cd "$RELEASE_TAG_CHECKOUT_DIR"
-svn co $RELEASE_TAG_SVN_URL/modules
-
-echo "Building release from tag (this will take about 10-15 minutes)..."
-mvn install $MAVEN_OPTS -Dmaven.test.skip=true -Ddbsetup-do-not-check-schema=true
-if [ "$?" -ne 0 ]; then
-   abort "Build failed. Please see above Maven output for details, fix any issues, then try again."
-fi
+echo "Checking out release tag $RELEASE_TAG..."
+git checkout "$RELEASE_TAG"
+[ "$?" -ne 0 ] && abort "Checkout of release tag ($RELEASE_TAG) failed. Please see above git output for details, fix any issues, then try again."
+git clean -dxf
+[ "$?" -ne 0 ] && abort "Failed to cleanup unversioned files. Please see above git output for details, fix any issues, then try again."
+echo "Building release from tag and publishing Maven artifacts (this will take about 10-15 minutes)..."
+mvn $MAVEN_RELEASE_PERFORM_GOAL $MAVEN_ARGS -Dmaven.test.skip=true -Ddbsetup-do-not-check-schema=true
+[ "$?" -ne 0 ] && abort "Release build failed. Please see above Maven output for details, fix any issues, then try again."
 echo
 echo "Release build succeeded!"
 
-echo "=========================== Release Info ==============================="
+
+echo
+echo "=============================== Release Info =================================="
 echo "Version: $RELEASE_VERSION"
-echo "Branch SVN URL: $RELEASE_BRANCH_SVN_URL"
-echo "Tag SVN URL: $RELEASE_TAG_SVN_URL"
-echo "========================================================================"
+echo "Branch URL: $PROJECT_GIT_WEB_URL;a=shortlog;h=refs/heads/$RELEASE_BRANCH"
+echo "Tag URL: $PROJECT_GIT_WEB_URL;a=shortlog;h=refs/tags/$RELEASE_TAG"
+echo "==============================================================================="
+
